# nodeup

./: Cargo.toml  README.md
.github/workflows/: deploy.yml  test.yml
src/: config.rs  lib.rs  local.rs  nodeup_files.rs  registry.rs  target.rs  verify.rs  version.rs
tests/: config-file.rs  download-dir.rs  linking.rs
