[package]
name = "nodeup"
version = "0.1.0"
authors = ["monkslc <monkslc@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
clap = "2.33.1"
dirs = "3.0.1"
flate2 = "1.0.16"
reqwest = { version = "0.10.7", features = ["blocking"] }
serde = { version = "1.0.114", features = ["derive"] }
tar = "0.4.29"
toml = "0.5.6"
