[package]
name = "nodeup"
version = "0.1.0"
authors = ["monkslc <monkslc@gmail.com>"]
edition = "2018"

[dependencies]
clap =  { version = "2.33.1", features = ["yaml"] }
dirs = "3.0.1"
flate2 = "1.0.16"
log = "0.4.11"
reqwest = { version = "0.10.7", features = ["blocking"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tar = "0.4.29"
tempfile = "3.1.0"
thiserror = "1.0.20"
toml = "0.5.6"
uuid = { version = "0.8.1", features = ["v4"] }
which = "4.0.2"
